Fixes #344, "Extra" field text aligned slightly differently from text in other fields

--- a/chrome/skin/default/zotero/zotero.css
+++ b/chrome/skin/default/zotero/zotero.css
@@ -164,6 +164,11 @@ zoterosearchtextbox .toolbarbutton-menu-dropmarker
 	margin-left:0;
 }
 
+#editpane-dynamic-fields row vbox[fieldname=extra]
+{
+	margin-left:6px;
+}
+
 .clicky, .unclicky
 {	
 	-moz-border-radius: 6px;
